fix content wrap

--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -105,7 +105,7 @@
 		margin-top: 20px;
 		display: grid;
 	    grid-auto-rows: minmax(20px, auto);
-		grid-template-columns: 1fr;
+		grid-template-columns: calc(100vw - 40px);
 	    grid-template-areas:
 		    "read-time"
 		    "body"
