--- a/assets/sass/pages/_careers-page.scss
+++ b/assets/sass/pages/_careers-page.scss
@@ -145,7 +145,7 @@
 	}
 
 	&__perks {
-		max-width: 1000px;
+		max-width: 90vw;
 		margin: auto;
 		display: grid;
 		grid-template-columns: auto auto;
